--- a/src/App.scss
+++ b/src/App.scss
@@ -34,5 +34,10 @@
     font-stretch: normal;
   }
 
-
-  
+  .return-btn {
+    display: flex;
+    align-items: flex-start;
+    text-decoration: none;
+    font-size: lato;
+    color: blanchedalmond;
+}
