--- a/src/Pages/Components/Shared/Menu/Menu.scss
+++ b/src/Pages/Components/Shared/Menu/Menu.scss
@@ -3,8 +3,9 @@
     
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;;
     width: 100%;
-    height: 44px;
+    height: 0px;
     font-size: 36px;
     font-weight: normal;
     font-style: normal;
@@ -17,7 +18,6 @@
         width:100%;
         text-align: center;
         position: fixed;
-        margin-top: 1200px;
         bottom: 0;
 
     &__link{
@@ -25,9 +25,5 @@
         color:  #ffffff;
         
     }
+
 }
-
-  
-
-  
-  
