proyecto api got terminada

--- a/src/Pages/Components/Shared/Menu/Menu.scss
+++ b/src/Pages/Components/Shared/Menu/Menu.scss
@@ -18,10 +18,10 @@
   bottom: 0;
 
   &__link {
-    padding-right: 500px;
+    padding: 20px;
     color: #ffffff;
-    position: relative;
-    left: 240px;
+    
+    
     
   }
 }
